Thu Feb  3 23:42:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close, strio_close_read, strio_close_write):
	  should return nil instead of self as well as IO.  [ruby-dev:25623]

	* ext/stringio/stringio.c (strio_extend, strio_putc): fill with zero
	  extended portion.  [ruby-dev:25626]

Wed Feb  2 23:52:53 2005  sheepman  <sheepman@tcn.zaq.ne.jp>

	* ext/stringio/stringio.c (strio_truncate): should MEMZERO an extended
	  part.  [ruby-dev:25618]

Wed Feb  2 21:56:01 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::Element#convert): added.

	* lib/rss/rss.rb: convert -> need_convert.

	* lib/rss/1.0.rb: ditto.

	* lib/rss/0.9.rb: ditto.

	* lib/rss/2.0.rb: ditto.

	* lib/rss/trackback.rb: ditto.

Tue Feb  1 22:48:48 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRb::DRbObject#respond_to?): check marshal_dump and
	_dump.

Tue Feb  1 00:20:23 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (aix): fix linker flags on AIX.  [ruby-talk:125460]

Mon Jan 31 13:33:21 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: add invalid namespace check

	* ext/tk/lib/multi-tk.rb: add invalid_namespace? method

	* ext/tk/lib/remote-tk.rb: ditto

Sat Jan 29 09:42:12 2005  Sam Roberts  <sroberts@uniserve.com>

	* lib/resolv.rb (Resolv::DNS::Resource::IN::SRV): Added RFC2782 SRV
	  resource record for specifying location of services.

Fri Jan 28 17:16:55 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Config.parse_resolv_conf):
	  parse options line for ndots option.
	  (Resolv::Hosts#lazy_initialize): return self.
	  (Resolv::DNS#lazy_initialize): ditto.
	  (Resolv::DNS::Config#lazy_initialize): ditto.
	  Suggested by Sam Roberts.

Thu Jan 27 00:15:29 2005  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb (setup): support BSD-style
	  directory group inheritance. (backport from HEAD, rev 1.32)
