@@ -56,7 +56,6 @@ module RSS
   end
 
   prefix_size = DC_PREFIX.size + 1
-  DublinCoreModel::ELEMENTS.uniq!
   DublinCoreModel::ELEMENTS.each do |x|
     BaseListener.install_get_text_element(x[prefix_size..-1], DC_URI, "#{x}=")
   end
