@@ -33,3 +33,4 @@ require "rss/maker/content"
 require "rss/maker/dublincore"
 require "rss/maker/syndication"
 require "rss/maker/trackback"
+require "rss/maker/image"
